--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
    width: 100%;
    background-color: #91929E;
    color: #000;
-   position: fixed;
+   position: absolute;
    top: 0;
    right: -100%;
    z-index: 999;
